parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TAB
    AND
    OR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> ins_gt_main programa1 valida_entra_global generaglo programa2 valida_salir_gobal programa3 dir_gt_main main programa3
Rule 2     programa -> empty
Rule 3     ins_gt_main -> <empty>
Rule 4     dir_gt_main -> <empty>
Rule 5     generaglo -> <empty>
Rule 6     programa1 -> RES_PROTO prototipos seen_prototipo programa1
Rule 7     programa1 -> empty
Rule 8     seen_prototipo -> <empty>
Rule 9     programa2 -> vars programa2
Rule 10    programa2 -> empty
Rule 11    valida_entra_global -> <empty>
Rule 12    valida_salir_gobal -> <empty>
Rule 13    programa3 -> programa3 modulos
Rule 14    programa3 -> empty
Rule 15    prototipos -> RES_FUNC dato seen_dato seen_nom_func LPAREN prototipos_1 RPAREN
Rule 16    seen_nom_func -> ID
Rule 17    seen_dato -> <empty>
Rule 18    prototipos_1 -> tipo seen_id_proto prototipos_2
Rule 19    prototipos_1 -> empty
Rule 20    seen_id_proto -> ID
Rule 21    prototipos_2 -> COMMA prototipos_1
Rule 22    prototipos_2 -> empty
Rule 23    dato -> RES_INT
Rule 24    dato -> RES_FLOAT
Rule 25    dato -> RES_DOUBLE
Rule 26    dato -> RES_BOOLEAN
Rule 27    dato -> RES_STRING
Rule 28    tipo -> dato
Rule 29    tipo -> estructura
Rule 30    estructura -> list
Rule 31    estructura -> array
Rule 32    vars -> RES_DEF COL vars1
Rule 33    vars_1 -> dato ID vars2 vars1_1
Rule 34    vars1 -> estructura empty
Rule 35    vars1 -> vars_1
Rule 36    vars1_1 -> vars1
Rule 37    vars1_1 -> empty
Rule 38    vars2 -> EQUALS cons
Rule 39    vars2 -> vars3
Rule 40    vars3 -> COMMA ID vars3
Rule 41    vars3 -> empty
Rule 42    list -> RES_LIST dato ID list1
Rule 43    list1 -> LCURLY cons_loop RCURLY
Rule 44    list1 -> empty
Rule 45    cons_loop -> cons cons_loop_1
Rule 46    cons_loop_1 -> COMMA cons_loop
Rule 47    cons_loop_1 -> empty
Rule 48    array -> RES_ARRAY dato crea_arr LBRACKET dim RBRACKET genera_ms array1
Rule 49    genera_ms -> <empty>
Rule 50    crea_arr -> ID
Rule 51    dim -> dim_cte dim_struct dim2
Rule 52    dim_cte -> CTE_INT
Rule 53    dim_struct -> <empty>
Rule 54    dim2 -> COMMA dim
Rule 55    dim2 -> empty
Rule 56    array1 -> COL LBRACKET array2 RBRACKET array1
Rule 57    array1 -> empty
Rule 58    array2 -> cons array3
Rule 59    array3 -> COMMA array2
Rule 60    array3 -> empty
Rule 61    modulos -> prototipos se_uso COL bloque cuad_def_proc_4
Rule 62    cuad_def_proc_4 -> <empty>
Rule 63    se_uso -> <empty>
Rule 64    bloque -> estatutos bloque
Rule 65    bloque -> return bloque
Rule 66    bloque -> empty
Rule 67    return -> RES_RETURN exp
Rule 68    estatutos -> condicion E_END
Rule 69    estatutos -> ciclo E_END
Rule 70    estatutos -> lectura
Rule 71    estatutos -> escritura
Rule 72    estatutos -> asignacion
Rule 73    estatutos -> llamada
Rule 74    estatutos -> vars
Rule 75    ciclo -> while
Rule 76    ciclo -> for
Rule 77    condicion -> if
Rule 78    condicion -> switch
Rule 79    llamada -> seen_id_call LPAREN call_proc_2 llamada1 RPAREN call_proc_4
Rule 80    call_proc_4 -> <empty>
Rule 81    seen_id_call -> ID
Rule 82    call_proc_2 -> <empty>
Rule 83    llamada1 -> exp call_proc_3 param
Rule 84    llamada1 -> empty
Rule 85    call_proc_3 -> <empty>
Rule 86    param -> COMMA exp call_proc_3 param
Rule 87    param -> empty
Rule 88    lectura -> RES_READ LPAREN tipo RPAREN
Rule 89    escritura -> RES_PRINT LPAREN cons RPAREN cuadruplo_est_prnt
Rule 90    cuadruplo_est_prnt -> <empty>
Rule 91    asignacion -> seen_id_asignacion consarray EQUALS cuadruplo_exp_8_asignacion asignacion1 insert_asignacion cuadruplo_exp_9_asignacion
Rule 92    cuadruplo_exp_8_asignacion -> <empty>
Rule 93    cuadruplo_exp_9_asignacion -> <empty>
Rule 94    seen_id_asignacion -> ID
Rule 95    insert_asignacion -> <empty>
Rule 96    asignacion1 -> exp
Rule 97    asignacion1 -> asignlist
Rule 98    asignacion1 -> asignarray
Rule 99    asignlist -> LCURLY asignlist1 RCURLY
Rule 100   asignlist1 -> cons
Rule 101   asignlist1 -> cons COMMA asignlist1
Rule 102   asignarray -> LBRACKET asignarray1 RBRACKET
Rule 103   asignarray1 -> cons
Rule 104   asignarray1 -> cons COMMA asignarray1
Rule 105   while -> RES_WHILE cuadruplo_est_while_1 LPAREN expresion RPAREN cuadruplo_est_while_2 COL bloque cuadruplo_est_while_3
Rule 106   cuadruplo_est_while_1 -> <empty>
Rule 107   cuadruplo_est_while_2 -> <empty>
Rule 108   cuadruplo_est_while_3 -> <empty>
Rule 109   for -> RES_FOR LPAREN forexp RPAREN sale_update COL bloque cuadruplo_est_for_3
Rule 110   sale_update -> <empty>
Rule 111   forexp -> asignacion cuadruplo_est_for_1 COL expresion cuadruplo_est_for_2 COL entra_update asignacion
Rule 112   entra_update -> <empty>
Rule 113   cuadruplo_est_for_1 -> <empty>
Rule 114   cuadruplo_est_for_2 -> <empty>
Rule 115   cuadruplo_est_for_3 -> <empty>
Rule 116   if -> RES_IF LPAREN expresion RPAREN cuadruplo_est_if_1 COL bloque ifelse
Rule 117   cuadruplo_est_if_1 -> <empty>
Rule 118   ifelse -> cuadruplo_est_if_else_2 RES_ELSE COL bloque cuadruplo_est_if_else_3
Rule 119   ifelse -> empty cuadruplo_est_if_2
Rule 120   cuadruplo_est_if_2 -> <empty>
Rule 121   cuadruplo_est_if_else_2 -> <empty>
Rule 122   cuadruplo_est_if_else_3 -> <empty>
Rule 123   switch -> RES_SWITCH LPAREN seen_exp_switch RPAREN COL switch2
Rule 124   seen_exp_switch -> exp
Rule 125   switch2 -> RES_CASE seen_exp_case COL seen_case_3 bloque seen_case_4 switch2
Rule 126   switch2 -> empty
Rule 127   seen_case_3 -> <empty>
Rule 128   seen_case_4 -> <empty>
Rule 129   seen_exp_case -> exp
Rule 130   expresion -> exp expresion_1 cuadruplo_exp_9
Rule 131   expresion_1 -> see_rel cuadruplo_exp_8 exp
Rule 132   expresion_1 -> empty
Rule 133   see_rel -> MIN
Rule 134   see_rel -> MIN_EQ
Rule 135   see_rel -> MAY
Rule 136   see_rel -> MAY_EQ
Rule 137   see_rel -> DIF
Rule 138   see_rel -> EQ_EQ
Rule 139   cuadruplo_exp_8 -> <empty>
Rule 140   cuadruplo_exp_9 -> <empty>
Rule 141   exp -> termino cuadruplo_exp_4 exp1
Rule 142   exp1 -> see_operador_e cuadruplos_exp_2 exp
Rule 143   exp1 -> empty
Rule 144   see_operador_e -> PLUS
Rule 145   see_operador_e -> MINUS
Rule 146   cuadruplos_exp_2 -> <empty>
Rule 147   termino -> factor cuadruplo_exp_5 termino1
Rule 148   termino1 -> see_operador_f cuadruplos_exp_3 termino
Rule 149   termino1 -> empty
Rule 150   see_operador_f -> TIMES
Rule 151   see_operador_f -> DIVIDE
Rule 152   cuadruplos_exp_3 -> <empty>
Rule 153   cuadruplo_exp_4 -> <empty>
Rule 154   cuadruplo_exp_5 -> <empty>
Rule 155   factor -> LPAREN cuadruplo_exp_6 exp RPAREN cuadruplo_exp_7
Rule 156   factor -> cons
Rule 157   factor -> PLUS cons
Rule 158   factor -> MINUS cons
Rule 159   cuadruplo_exp_6 -> <empty>
Rule 160   cuadruplo_exp_7 -> <empty>
Rule 161   cons -> seen_id_cons consarray exp_1
Rule 162   cons -> seen_int_cons exp_cons_int
Rule 163   cons -> seen_float_cons exp_cons_float
Rule 164   cons -> seen_double_cons exp_cons_double
Rule 165   cons -> seen_string_cons exp_cons_string
Rule 166   cons -> seen_bool
Rule 167   cons -> conslist
Rule 168   seen_bool -> RES_TRUE
Rule 169   seen_bool -> RES_FALSE
Rule 170   seen_id_cons -> ID
Rule 171   seen_float_cons -> CTE_FLOAT
Rule 172   seen_double_cons -> CTE_DOUBLE
Rule 173   seen_string_cons -> CTE_STRING
Rule 174   seen_int_cons -> CTE_INT
Rule 175   exp_1 -> <empty>
Rule 176   exp_cons_int -> <empty>
Rule 177   exp_cons_float -> <empty>
Rule 178   exp_cons_double -> <empty>
Rule 179   exp_cons_string -> <empty>
Rule 180   main -> RES_START comienza_main COL bloque RES_END
Rule 181   comienza_main -> <empty>
Rule 182   consarray -> LBRACKET dim_pos RBRACKET
Rule 183   consarray -> empty
Rule 184   dim_pos -> seen_int_pos dim_pos_2
Rule 185   seen_int_pos -> CTE_INT
Rule 186   dim_pos_2 -> COMMA dim_pos
Rule 187   dim_pos_2 -> empty
Rule 188   conslist -> ID EQUALS LCURLY conslist1 RCURLY
Rule 189   conslist1 -> cons
Rule 190   conslist1 -> cons COMMA conslist1
Rule 191   empty -> <empty>

Terminals, with rules where they appear

AND                  : 
COL                  : 32 56 61 105 109 111 111 116 118 123 125 180
COMMA                : 21 40 46 54 59 86 101 104 186 190
CTE_DOUBLE           : 172
CTE_FLOAT            : 171
CTE_INT              : 52 174 185
CTE_STRING           : 173
DIF                  : 137
DIVIDE               : 151
EQUALS               : 38 91 188
EQ_EQ                : 138
E_END                : 68 69
ID                   : 16 20 33 40 42 50 81 94 170 188
LBRACKET             : 48 56 102 182
LCURLY               : 43 99 188
LPAREN               : 15 79 88 89 105 109 116 123 155
MAY                  : 135
MAY_EQ               : 136
MIN                  : 133
MINUS                : 145 158
MIN_EQ               : 134
OR                   : 
PLUS                 : 144 157
RBRACKET             : 48 56 102 182
RCURLY               : 43 99 188
RES_ARRAY            : 48
RES_BOOLEAN          : 26
RES_CASE             : 125
RES_DEF              : 32
RES_DOUBLE           : 25
RES_ELSE             : 118
RES_END              : 180
RES_FALSE            : 169
RES_FLOAT            : 24
RES_FOR              : 109
RES_FUNC             : 15
RES_IF               : 116
RES_INT              : 23
RES_LIST             : 42
RES_PRINT            : 89
RES_PROTO            : 6
RES_READ             : 88
RES_RETURN           : 67
RES_START            : 180
RES_STRING           : 27
RES_SWITCH           : 123
RES_TRUE             : 168
RES_WHILE            : 105
RPAREN               : 15 79 88 89 105 109 116 123 155
TAB                  : 
TIMES                : 150
error                : 

Nonterminals, with rules where they appear

array                : 31
array1               : 48 56
array2               : 56 59
array3               : 58
asignacion           : 72 111 111
asignacion1          : 91
asignarray           : 98
asignarray1          : 102 104
asignlist            : 97
asignlist1           : 99 101
bloque               : 61 64 65 105 109 116 118 125 180
call_proc_2          : 79
call_proc_3          : 83 86
call_proc_4          : 79
ciclo                : 69
comienza_main        : 180
condicion            : 68
cons                 : 38 45 58 89 100 101 103 104 156 157 158 189 190
cons_loop            : 43 46
cons_loop_1          : 45
consarray            : 91 161
conslist             : 167
conslist1            : 188 190
crea_arr             : 48
cuad_def_proc_4      : 61
cuadruplo_est_for_1  : 111
cuadruplo_est_for_2  : 111
cuadruplo_est_for_3  : 109
cuadruplo_est_if_1   : 116
cuadruplo_est_if_2   : 119
cuadruplo_est_if_else_2 : 118
cuadruplo_est_if_else_3 : 118
cuadruplo_est_prnt   : 89
cuadruplo_est_while_1 : 105
cuadruplo_est_while_2 : 105
cuadruplo_est_while_3 : 105
cuadruplo_exp_4      : 141
cuadruplo_exp_5      : 147
cuadruplo_exp_6      : 155
cuadruplo_exp_7      : 155
cuadruplo_exp_8      : 131
cuadruplo_exp_8_asignacion : 91
cuadruplo_exp_9      : 130
cuadruplo_exp_9_asignacion : 91
cuadruplos_exp_2     : 142
cuadruplos_exp_3     : 148
dato                 : 15 28 33 42 48
dim                  : 48 54
dim2                 : 51
dim_cte              : 51
dim_pos              : 182 186
dim_pos_2            : 184
dim_struct           : 51
dir_gt_main          : 1
empty                : 2 7 10 14 19 22 34 37 41 44 47 55 57 60 66 84 87 119 126 132 143 149 183 187
entra_update         : 111
escritura            : 71
estatutos            : 64
estructura           : 29 34
exp                  : 67 83 86 96 124 129 130 131 142 155
exp1                 : 141
exp_1                : 161
exp_cons_double      : 164
exp_cons_float       : 163
exp_cons_int         : 162
exp_cons_string      : 165
expresion            : 105 111 116
expresion_1          : 130
factor               : 147
for                  : 76
forexp               : 109
genera_ms            : 48
generaglo            : 1
if                   : 77
ifelse               : 116
ins_gt_main          : 1
insert_asignacion    : 91
lectura              : 70
list                 : 30
list1                : 42
llamada              : 73
llamada1             : 79
main                 : 1
modulos              : 13
param                : 83 86
programa             : 0
programa1            : 1 6
programa2            : 1 9
programa3            : 1 1 13
prototipos           : 6 61
prototipos_1         : 15 21
prototipos_2         : 18
return               : 65
sale_update          : 109
se_uso               : 61
see_operador_e       : 142
see_operador_f       : 148
see_rel              : 131
seen_bool            : 166
seen_case_3          : 125
seen_case_4          : 125
seen_dato            : 15
seen_double_cons     : 164
seen_exp_case        : 125
seen_exp_switch      : 123
seen_float_cons      : 163
seen_id_asignacion   : 91
seen_id_call         : 79
seen_id_cons         : 161
seen_id_proto        : 18
seen_int_cons        : 162
seen_int_pos         : 184
seen_nom_func        : 15
seen_prototipo       : 6
seen_string_cons     : 165
switch               : 78
switch2              : 123 125
termino              : 141 148
termino1             : 147
tipo                 : 18 88
valida_entra_global  : 1
valida_salir_gobal   : 1
vars                 : 9 74
vars1                : 32 36
vars1_1              : 33
vars2                : 33
vars3                : 39 40
vars_1               : 35
while                : 75

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . ins_gt_main programa1 valida_entra_global generaglo programa2 valida_salir_gobal programa3 dir_gt_main main programa3
    (2) programa -> . empty
    (3) ins_gt_main -> .
    (191) empty -> .

    RES_PROTO       reduce using rule 3 (ins_gt_main -> .)
    RES_DEF         reduce using rule 3 (ins_gt_main -> .)
    RES_FUNC        reduce using rule 3 (ins_gt_main -> .)
    RES_START       reduce using rule 3 (ins_gt_main -> .)
    $end            reduce using rule 191 (empty -> .)

    ins_gt_main                    shift and go to state 1
    programa                       shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) programa -> ins_gt_main . programa1 valida_entra_global generaglo programa2 valida_salir_gobal programa3 dir_gt_main main programa3
    (6) programa1 -> . RES_PROTO prototipos seen_prototipo programa1
    (7) programa1 -> . empty
    (191) empty -> .

    RES_PROTO       shift and go to state 5
    RES_DEF         reduce using rule 191 (empty -> .)
    RES_FUNC        reduce using rule 191 (empty -> .)
    RES_START       reduce using rule 191 (empty -> .)

    programa1                      shift and go to state 4
    empty                          shift and go to state 6

state 2

    (0) S' -> programa .



state 3

    (2) programa -> empty .

    $end            reduce using rule 2 (programa -> empty .)


state 4

    (1) programa -> ins_gt_main programa1 . valida_entra_global generaglo programa2 valida_salir_gobal programa3 dir_gt_main main programa3
    (11) valida_entra_global -> .

    RES_DEF         reduce using rule 11 (valida_entra_global -> .)
    RES_FUNC        reduce using rule 11 (valida_entra_global -> .)
    RES_START       reduce using rule 11 (valida_entra_global -> .)

    valida_entra_global            shift and go to state 7

state 5

    (6) programa1 -> RES_PROTO . prototipos seen_prototipo programa1
    (15) prototipos -> . RES_FUNC dato seen_dato seen_nom_func LPAREN prototipos_1 RPAREN

    RES_FUNC        shift and go to state 9

    prototipos                     shift and go to state 8

state 6

    (7) programa1 -> empty .

    RES_DEF         reduce using rule 7 (programa1 -> empty .)
    RES_FUNC        reduce using rule 7 (programa1 -> empty .)
    RES_START       reduce using rule 7 (programa1 -> empty .)


state 7

    (1) programa -> ins_gt_main programa1 valida_entra_global . generaglo programa2 valida_salir_gobal programa3 dir_gt_main main programa3
    (5) generaglo -> .

    RES_DEF         reduce using rule 5 (generaglo -> .)
    RES_FUNC        reduce using rule 5 (generaglo -> .)
    RES_START       reduce using rule 5 (generaglo -> .)

    generaglo                      shift and go to state 10

state 8

    (6) programa1 -> RES_PROTO prototipos . seen_prototipo programa1
    (8) seen_prototipo -> .

    RES_PROTO       reduce using rule 8 (seen_prototipo -> .)
    RES_DEF         reduce using rule 8 (seen_prototipo -> .)
    RES_FUNC        reduce using rule 8 (seen_prototipo -> .)
    RES_START       reduce using rule 8 (seen_prototipo -> .)

    seen_prototipo                 shift and go to state 11

state 9

    (15) prototipos -> RES_FUNC . dato seen_dato seen_nom_func LPAREN prototipos_1 RPAREN
    (23) dato -> . RES_INT
    (24) dato -> . RES_FLOAT
    (25) dato -> . RES_DOUBLE
    (26) dato -> . RES_BOOLEAN
    (27) dato -> . RES_STRING

    RES_INT         shift and go to state 13
    RES_FLOAT       shift and go to state 17
    RES_DOUBLE      shift and go to state 15
    RES_BOOLEAN     shift and go to state 12
    RES_STRING      shift and go to state 14

    dato                           shift and go to state 16

state 10

    (1) programa -> ins_gt_main programa1 valida_entra_global generaglo . programa2 valida_salir_gobal programa3 dir_gt_main main programa3
    (9) programa2 -> . vars programa2
    (10) programa2 -> . empty
    (32) vars -> . RES_DEF COL vars1
    (191) empty -> .

    RES_DEF         shift and go to state 20
    RES_FUNC        reduce using rule 191 (empty -> .)
    RES_START       reduce using rule 191 (empty -> .)

    vars                           shift and go to state 18
    programa2                      shift and go to state 19
    empty                          shift and go to state 21

state 11

    (6) programa1 -> RES_PROTO prototipos seen_prototipo . programa1
    (6) programa1 -> . RES_PROTO prototipos seen_prototipo programa1
    (7) programa1 -> . empty
    (191) empty -> .

    RES_PROTO       shift and go to state 5
    RES_DEF         reduce using rule 191 (empty -> .)
    RES_FUNC        reduce using rule 191 (empty -> .)
    RES_START       reduce using rule 191 (empty -> .)

    empty                          shift and go to state 6
    programa1                      shift and go to state 22

state 12

    (26) dato -> RES_BOOLEAN .

    ID              reduce using rule 26 (dato -> RES_BOOLEAN .)
    RPAREN          reduce using rule 26 (dato -> RES_BOOLEAN .)


state 13

    (23) dato -> RES_INT .

    ID              reduce using rule 23 (dato -> RES_INT .)
    RPAREN          reduce using rule 23 (dato -> RES_INT .)


state 14

    (27) dato -> RES_STRING .

    ID              reduce using rule 27 (dato -> RES_STRING .)
    RPAREN          reduce using rule 27 (dato -> RES_STRING .)


state 15

    (25) dato -> RES_DOUBLE .

    ID              reduce using rule 25 (dato -> RES_DOUBLE .)
    RPAREN          reduce using rule 25 (dato -> RES_DOUBLE .)


state 16

    (15) prototipos -> RES_FUNC dato . seen_dato seen_nom_func LPAREN prototipos_1 RPAREN
    (17) seen_dato -> .

    ID              reduce using rule 17 (seen_dato -> .)

    seen_dato                      shift and go to state 23

state 17

    (24) dato -> RES_FLOAT .

    ID              reduce using rule 24 (dato -> RES_FLOAT .)
    RPAREN          reduce using rule 24 (dato -> RES_FLOAT .)


state 18

    (9) programa2 -> vars . programa2
    (9) programa2 -> . vars programa2
    (10) programa2 -> . empty
    (32) vars -> . RES_DEF COL vars1
    (191) empty -> .

    RES_DEF         shift and go to state 20
    RES_FUNC        reduce using rule 191 (empty -> .)
    RES_START       reduce using rule 191 (empty -> .)

    programa2                      shift and go to state 24
    empty                          shift and go to state 21
    vars                           shift and go to state 18

state 19

    (1) programa -> ins_gt_main programa1 valida_entra_global generaglo programa2 . valida_salir_gobal programa3 dir_gt_main main programa3
    (12) valida_salir_gobal -> .

    RES_FUNC        reduce using rule 12 (valida_salir_gobal -> .)
    RES_START       reduce using rule 12 (valida_salir_gobal -> .)

    valida_salir_gobal             shift and go to state 25

state 20

    (32) vars -> RES_DEF . COL vars1

    COL             shift and go to state 26


state 21

    (10) programa2 -> empty .

    RES_FUNC        reduce using rule 10 (programa2 -> empty .)
    RES_START       reduce using rule 10 (programa2 -> empty .)


state 22

    (6) programa1 -> RES_PROTO prototipos seen_prototipo programa1 .

    RES_DEF         reduce using rule 6 (programa1 -> RES_PROTO prototipos seen_prototipo programa1 .)
    RES_FUNC        reduce using rule 6 (programa1 -> RES_PROTO prototipos seen_prototipo programa1 .)
    RES_START       reduce using rule 6 (programa1 -> RES_PROTO prototipos seen_prototipo programa1 .)


state 23

    (15) prototipos -> RES_FUNC dato seen_dato . seen_nom_func LPAREN prototipos_1 RPAREN
    (16) seen_nom_func -> . ID

    ID              shift and go to state 28

    seen_nom_func                  shift and go to state 27

state 24

    (9) programa2 -> vars programa2 .

    RES_FUNC        reduce using rule 9 (programa2 -> vars programa2 .)
    RES_START       reduce using rule 9 (programa2 -> vars programa2 .)


state 25

    (1) programa -> ins_gt_main programa1 valida_entra_global generaglo programa2 valida_salir_gobal . programa3 dir_gt_main main programa3
    (13) programa3 -> . programa3 modulos
    (14) programa3 -> . empty
    (191) empty -> .

    RES_FUNC        reduce using rule 191 (empty -> .)
    RES_START       reduce using rule 191 (empty -> .)

    programa3                      shift and go to state 29
    empty                          shift and go to state 30

state 26

    (32) vars -> RES_DEF COL . vars1
    (34) vars1 -> . estructura empty
    (35) vars1 -> . vars_1
    (30) estructura -> . list
    (31) estructura -> . array
    (33) vars_1 -> . dato ID vars2 vars1_1
    (42) list -> . RES_LIST dato ID list1
    (48) array -> . RES_ARRAY dato crea_arr LBRACKET dim RBRACKET genera_ms array1
    (23) dato -> . RES_INT
    (24) dato -> . RES_FLOAT
    (25) dato -> . RES_DOUBLE
    (26) dato -> . RES_BOOLEAN
    (27) dato -> . RES_STRING

    RES_LIST        shift and go to state 36
    RES_ARRAY       shift and go to state 33
    RES_INT         shift and go to state 13
    RES_FLOAT       shift and go to state 17
    RES_DOUBLE      shift and go to state 15
    RES_BOOLEAN     shift and go to state 12
    RES_STRING      shift and go to state 14

    list                           shift and go to state 37
    estructura                     shift and go to state 34
    dato                           shift and go to state 35
    vars1                          shift and go to state 32
    array                          shift and go to state 31
    vars_1                         shift and go to state 38

state 27

    (15) prototipos -> RES_FUNC dato seen_dato seen_nom_func . LPAREN prototipos_1 RPAREN

    LPAREN          shift and go to state 39


state 28

    (16) seen_nom_func -> ID .

    LPAREN          reduce using rule 16 (seen_nom_func -> ID .)


state 29

    (1) programa -> ins_gt_main programa1 valida_entra_global generaglo programa2 valida_salir_gobal programa3 . dir_gt_main main programa3
    (13) programa3 -> programa3 . modulos
    (4) dir_gt_main -> .
    (61) modulos -> . prototipos se_uso COL bloque cuad_def_proc_4
    (15) prototipos -> . RES_FUNC dato seen_dato seen_nom_func LPAREN prototipos_1 RPAREN

    RES_START       reduce using rule 4 (dir_gt_main -> .)
    RES_FUNC        shift and go to state 9

    prototipos                     shift and go to state 40
    dir_gt_main                    shift and go to state 41
    modulos                        shift and go to state 42

state 30

    (14) programa3 -> empty .

    RES_FUNC        reduce using rule 14 (programa3 -> empty .)
    $end            reduce using rule 14 (programa3 -> empty .)
    RES_START       reduce using rule 14 (programa3 -> empty .)


state 31

    (31) estructura -> array .

    RES_DEF         reduce using rule 31 (estructura -> array .)
    RES_FUNC        reduce using rule 31 (estructura -> array .)
    RES_START       reduce using rule 31 (estructura -> array .)
    RES_RETURN      reduce using rule 31 (estructura -> array .)
    RES_READ        reduce using rule 31 (estructura -> array .)
    RES_PRINT       reduce using rule 31 (estructura -> array .)
    RES_IF          reduce using rule 31 (estructura -> array .)
    RES_SWITCH      reduce using rule 31 (estructura -> array .)
    RES_WHILE       reduce using rule 31 (estructura -> array .)
    RES_FOR         reduce using rule 31 (estructura -> array .)
    ID              reduce using rule 31 (estructura -> array .)
    $end            reduce using rule 31 (estructura -> array .)
    RES_END         reduce using rule 31 (estructura -> array .)
    E_END           reduce using rule 31 (estructura -> array .)
    RES_ELSE        reduce using rule 31 (estructura -> array .)
    RES_CASE        reduce using rule 31 (estructura -> array .)
    RPAREN          reduce using rule 31 (estructura -> array .)


state 32

    (32) vars -> RES_DEF COL vars1 .

    RES_RETURN      reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_READ        reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_PRINT       reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_DEF         reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_IF          reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_SWITCH      reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_WHILE       reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_FOR         reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    ID              reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    E_END           reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_FUNC        reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_START       reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    $end            reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_END         reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_ELSE        reduce using rule 32 (vars -> RES_DEF COL vars1 .)
    RES_CASE        reduce using rule 32 (vars -> RES_DEF COL vars1 .)


state 33

    (48) array -> RES_ARRAY . dato crea_arr LBRACKET dim RBRACKET genera_ms array1
    (23) dato -> . RES_INT
    (24) dato -> . RES_FLOAT
    (25) dato -> . RES_DOUBLE
    (26) dato -> . RES_BOOLEAN
    (27) dato -> . RES_STRING

    RES_INT         shift and go to state 13
    RES_FLOAT       shift and go to state 17
    RES_DOUBLE      shift and go to state 15
    RES_BOOLEAN     shift and go to state 12
    RES_STRING      shift and go to state 14

    dato                           shift and go to state 43

state 34

    (34) vars1 -> estructura . empty
    (191) empty -> .

    RES_DEF         reduce using rule 191 (empty -> .)
    RES_FUNC        reduce using rule 191 (empty -> .)
    RES_START       reduce using rule 191 (empty -> .)
    RES_RETURN      reduce using rule 191 (empty -> .)
    RES_READ        reduce using rule 191 (empty -> .)
    RES_PRINT       reduce using rule 191 (empty -> .)
    RES_IF          reduce using rule 191 (empty -> .)
    RES_SWITCH      reduce using rule 191 (empty -> .)
    RES_WHILE       reduce using rule 191 (empty -> .)
    RES_FOR         reduce using rule 191 (empty -> .)
    ID              reduce using rule 191 (empty -> .)
    $end            reduce using rule 191 (empty -> .)
    RES_END         reduce using rule 191 (empty -> .)
    E_END           reduce using rule 191 (empty -> .)
    RES_ELSE        reduce using rule 191 (empty -> .)
    RES_CASE        reduce using rule 191 (empty -> .)

    empty                          shift and go to state 44

state 35

    (33) vars_1 -> dato . ID vars2 vars1_1

    ID              shift and go to state 45


state 36

    (42) list -> RES_LIST . dato ID list1
    (23) dato -> . RES_INT
    (24) dato -> . RES_FLOAT
    (25) dato -> . RES_DOUBLE
    (26) dato -> . RES_BOOLEAN
    (27) dato -> . RES_STRING

    RES_INT         shift and go to state 13
    RES_FLOAT       shift and go to state 17
    RES_DOUBLE      shift and go to state 15
    RES_BOOLEAN     shift and go to state 12
    RES_STRING      shift and go to state 14

    dato                           shift and go to state 46

state 37

    (30) estructura -> list .

    RES_DEF         reduce using rule 30 (estructura -> list .)
    RES_FUNC        reduce using rule 30 (estructura -> list .)
    RES_START       reduce using rule 30 (estructura -> list .)
    RES_RETURN      reduce using rule 30 (estructura -> list .)
    RES_READ        reduce using rule 30 (estructura -> list .)
    RES_PRINT       reduce using rule 30 (estructura -> list .)
    RES_IF          reduce using rule 30 (estructura -> list .)
    RES_SWITCH      reduce using rule 30 (estructura -> list .)
    RES_WHILE       reduce using rule 30 (estructura -> list .)
    RES_FOR         reduce using rule 30 (estructura -> list .)
    ID              reduce using rule 30 (estructura -> list .)
    $end            reduce using rule 30 (estructura -> list .)
    RES_END         reduce using rule 30 (estructura -> list .)
    E_END           reduce using rule 30 (estructura -> list .)
    RES_ELSE        reduce using rule 30 (estructura -> list .)
    RES_CASE        reduce using rule 30 (estructura -> list .)
    RPAREN          reduce using rule 30 (estructura -> list .)


state 38

    (35) vars1 -> vars_1 .

    RES_DEF         reduce using rule 35 (vars1 -> vars_1 .)
    RES_FUNC        reduce using rule 35 (vars1 -> vars_1 .)
    RES_START       reduce using rule 35 (vars1 -> vars_1 .)
    RES_RETURN      reduce using rule 35 (vars1 -> vars_1 .)
    RES_READ        reduce using rule 35 (vars1 -> vars_1 .)
    RES_PRINT       reduce using rule 35 (vars1 -> vars_1 .)
    RES_IF          reduce using rule 35 (vars1 -> vars_1 .)
    RES_SWITCH      reduce using rule 35 (vars1 -> vars_1 .)
    RES_WHILE       reduce using rule 35 (vars1 -> vars_1 .)
    RES_FOR         reduce using rule 35 (vars1 -> vars_1 .)
    ID              reduce using rule 35 (vars1 -> vars_1 .)
    $end            reduce using rule 35 (vars1 -> vars_1 .)
    RES_END         reduce using rule 35 (vars1 -> vars_1 .)
    E_END           reduce using rule 35 (vars1 -> vars_1 .)
    RES_ELSE        reduce using rule 35 (vars1 -> vars_1 .)
    RES_CASE        reduce using rule 35 (vars1 -> vars_1 .)


state 39

    (15) prototipos -> RES_FUNC dato seen_dato seen_nom_func LPAREN . prototipos_1 RPAREN
    (18) prototipos_1 -> . tipo seen_id_proto prototipos_2
    (19) prototipos_1 -> . empty
    (28) tipo -> . dato
    (29) tipo -> . estructura
    (191) empty -> .
    (23) dato -> . RES_INT
    (24) dato -> . RES_FLOAT
    (25) dato -> . RES_DOUBLE
    (26) dato -> . RES_BOOLEAN
    (27) dato -> . RES_STRING
    (30) estructura -> . list
    (31) estructura -> . array
    (42) list -> . RES_LIST dato ID list1
    (48) array -> . RES_ARRAY dato crea_arr LBRACKET dim RBRACKET genera_ms array1

    RPAREN          reduce using rule 191 (empty -> .)
    RES_INT         shift and go to state 13
    RES_FLOAT       shift and go to state 17
    RES_DOUBLE      shift and go to state 15
    RES_BOOLEAN     shift and go to state 12
    RES_STRING      shift and go to state 14
    RES_LIST        shift and go to state 36
    RES_ARRAY       shift and go to state 33
